# cloud-watch-logger

./: Cargo.toml
src/: main.rs
